--- a/Publications.html
+++ b/Publications.html
@@ -13,6 +13,14 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	
+
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+
+	
 <style>
 body {
   font-family: "Lato", sans-serif;
