--- a/index.html
+++ b/index.html
@@ -97,16 +97,15 @@ I-16146 Genova (GE) - Italia <br><br>
 	&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; davide.frapporti[ at ]uni-bayreuth.de (old)
 
 <br> <br> <br><br>
-Previously I was a Post-Doc at the <a href="https://www.mathe8.uni-bayreuth.de/en/index.html">Universit&aumlt Bayreuth</a> with I. Bauer and F. Catanese.<br>
+Previously I was a Post-Doc at the <a href="https://www.mathe8.uni-bayreuth.de/en/index.html">Universit&aumlt Bayreuth</a> with I. Bauer and F. Catanese,
+	where I got the title "Habilitierter Doktor der Naturwissenschaften".<br>
 I got my PhD at the Università di Trento under the supervision of R. Pignatelli.<br><br><br>
 
 In November 2020, I was awarded  the Italian “Abilitazione Scientifica Nazionale” (Settore Concorsuale: 01/A2; Seconda Fascia).<br>
-In October 2021, I was awarded the title of "Privatdozent" through the “Lehrbefugnis für das Fachgebiet Mathematik”.
+In October 2021, I was awarded the qualification of "Privatdozent" through the “Lehrbefugnis für das Fachgebiet Mathematik”.
+<br> <br> <br>
 
-
-
-
-<br> <br> <br> 
+	
 Research interests:<br><br>
 
 My field of research is complex algebraic geometry,  
