--- a/Publications.html
+++ b/Publications.html
@@ -97,7 +97,7 @@ body {
 
 	     My profiles on: 
 	    <a href="https://arxiv.org/search/math?searchtype=author&query=Frapporti%2C+D">ArXiv</a>, 
-	    <a href="https://orcid.org/0000-0002-6313-8141">orcid</a>, 
+	    <a href="https://orcid.org/0000-0002-6313-8141">ORCID</a>, 
 	    <a href="https://scholar.google.com/citations?hl=it&user=1ZmRr3kAAAAJ">Google scholar</a>, 
 	    <a href="https://mathscinet.ams.org/mathscinet/search/author.html?mrauthid=1031054">Mathschinet</a>.
 <br><br>
