--- a/Publications.html
+++ b/Publications.html
@@ -19,7 +19,6 @@
 	
 	
 	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"> 
-	  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
  </script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	
@@ -150,7 +149,7 @@ Part 2 of <i>Varieties of Nodal surfaces, coding theory and Discriminants of cub
 		
 		
 	 <li value="11"> (with <a href = "https://sites.google.com/site/kyoungseogleemath/home">K.-S. Lee</a>)
-        	 <i>Divisors on surfaces isogenous to a product of mixed type with $p_g=0$</i>.<p>
+        	 <i>Divisors on surfaces isogenous to a product of mixed type with \(p_g=0\)</i>.<p>
 		 <i>Pacific J. Math</i>, Vol. 318 (2): 233-247, 2022.     
 [<a href="https://msp.org/pjm/2022/318-2/pjm-v318-n2-p01-p.pdf">Journal link</a>,
         <a href="https://arxiv.org/abs/1908.09330">arXiv:1908.09330</a>] <p>
@@ -194,7 +193,7 @@ Related files: <a href = "RelatedFiles/MixedSIPareMDS.txt"> The Magma script</a>
 	
 
 	<li value="6"> (with <a href = "http://www.mathe8.uni-bayreuth.de/de/team/professors/BauerIngrid/index.html">I. Bauer</a>)
-	 <i>Bloch's conjecture for generalized Burniat type surfaces with $p_g=0$.</i> <p>
+	 <i>Bloch's conjecture for generalized Burniat type surfaces with \(p_g=0\).</i> <p>
       	<i>Rendiconti del Circolo Matematico di Palermo (1952 -)</i>, Vol. 64(1): 27-42, 2015. 
         [<a href="http://link.springer.com/article/10.1007%2Fs12215-014-0176-4">Journal link</a>,
         <a href="https://arxiv.org/abs/1408.0760">arXiv:1408.0760</a>]
@@ -215,7 +214,7 @@ Related files: <a href = "RelatedFiles/MixedSIPareMDS.txt"> The Magma script</a>
          <a href = "RelatedFiles/mixedqe2/Mixed.txt"> the script</a>.
 
 
-        <li value="3">  <i>Mixed quasi-&eacutetale surfaces, new surfaces of general type with $p_g=0$ and their fundamental group</i>. <p>
+        <li value="3">  <i>Mixed quasi-&eacutetale surfaces, new surfaces of general type with \(p_g=0\) and their fundamental group</i>. <p>
         <i>Collectanea Mathematica</i>, Vol. 64(3): 293-311, 2013. 
 	[<a href = "http://link.springer.com/article/10.1007%2Fs13348-013-0084-5">Journal link</a>, 
         <a href="https://arxiv.org/abs/1105.1259">arXiv:1105.1259</a>] <p>
@@ -228,7 +227,7 @@ Ph.D. Dissertation; Universit&agrave di Trento, 2012.
 Available at <a href= "http://eprints-phd.biblio.unitn.it/686/">http://eprints-phd.biblio.unitn.it/686/</a>.
 
 	
-<li value="1"> (with L. Farnik and S. Marchesi) <i> On the non-existence of orthogonal instanton bundles on $\mathbb P^{2n+1}$</i>.<p>
+<li value="1"> (with L. Farnik and S. Marchesi) <i> On the non-existence of orthogonal instanton bundles on \(\mathbb P^{2n+1}\)</i>.<p>
 	<i>Le Matematiche </i>, Vol. 64(2): 81-90, 2009. 
         [<a href="http://www.dmi.unict.it/ojs/index.php/lematematiche/article/view/755">Journal link</a>,
 	<a href="https://arxiv.org/abs/0912.2292">arXiv:0912.2292</a>]
