--- a/Conferences.html
+++ b/Conferences.html
@@ -92,7 +92,7 @@ body {
 <ul>
 <li><a href="https://www.mathe8.uni-bayreuth.de/de/forschung/young-perspectives-II/index.html"> <i>Young Perspectives in Algebraic Geometry II</i></a>,<br>   
 3-5 April 2019 
-at Universit&aumltt Bayreuth (Germany).
+at Universit&aumlt Bayreuth (Germany).
 
 <br><br>
 
@@ -106,7 +106,7 @@ at Universit&aumltt Bayreuth (Germany).
 
 <li><a href="https://www.mathe8.uni-bayreuth.de/de/forschung/young-perspectives/index.html"> <i>Young Perspectives in Algebraic Geometry </i></a>,   <br>
 7-9 March 2018
-at Universit&aumltt Bayreuth (Germany).
+at Universit&aumlt Bayreuth (Germany).
 
 
 <br><br>
