--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta name="ROBOTS" content="INDEX, FOLLOW">
 <meta name="author" content="Davide Frapporti">
 <meta name="description" content="Davide Frapporti's Homepage">
-<meta name="KEYWORDS" content="Frapporti, Post-doc, university,  Math, algebraic, geometry">
+<meta name="KEYWORDS" content="Frapporti, researcher, university,  Math, algebraic, geometry">
 
 <BODY bgcolor="WHITE">
 
@@ -86,18 +86,20 @@ body {
 <TR>
 <TD width=70% valign="center"> 
 <br>
-	    <p>I am currently a Post-Doc at the </p>
-        <a href="https://dima.unige.it/"> Dipartimento di Matematica - DIMA</a>    of the <br>
-        <a href="https://unige.it/"> Università degli Studi di Genova</a> <br>
-        Via Dodecaneso 35, <br>
-I-16146 Genova (GE) - Italia <br><br>
-		
+	    <p>I am a researcher (RTD/A) at the </p>
+        <a href="https://www.mate.polimi.it/"> Dipartimento di Matematica </a> of the <br>
+        <a href="https://www.polimi.it/"> Politecnico di Milano </a><br>
+Piazza Leonardo da Vinci, 32<br>
+I-20133 Milano <br><br>
 
-        e-mail: davide.frapporti[ at ]edu.unige.it<br>
+
+        e-mail: davide.frapporti[ at ]polimi.it (old) <br> 
+	&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; davide.frapporti[ at ]edu.unige.it (old) <br> 
 	&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; davide.frapporti[ at ]uni-bayreuth.de (old)
 
 <br> <br> <br><br>
-Previously I was a Post-Doc at the <a href="https://www.mathe8.uni-bayreuth.de/en/index.html">Universit&aumlt Bayreuth</a> with I. Bauer and F. Catanese,
+Previously I was a Post-Doc at the <a href="https://unige.it/">University of Genova </a> and 
+	before a Post-Doc at the <a href="https://www.mathe8.uni-bayreuth.de/en/index.html">Universit&aumlt Bayreuth</a> with I. Bauer and F. Catanese,
 	where I got the title "Habilitierter Doktor der Naturwissenschaften".<br>
 I got my PhD at the Università di Trento under the supervision of R. Pignatelli.<br><br><br>
 
