--- a/Conferences.html
+++ b/Conferences.html
@@ -70,8 +70,8 @@ body {
 <div class="sidenav"><p>
 <t> <i>Davide Frapporti</i></t><p><p>
 <a href="index.html"> Home </a><p>
-  <a href="">Publications and Preprints</a><p>
-  <a href="Conferences.html">Conferences and Workshops</a><p>
+  <a href="Publications.html">Publications and Preprints</a><p>
+  <a href="">Conferences and Workshops</a><p>
 <a href="Teaching.html">Teaching</a><p>
 </div>
 
