--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Piazza Leonardo da Vinci, 32<br>
 I-20133 Milano <br><br>
 
 
-        e-mail: davide.frapporti[ at ]polimi.it (old) <br> 
+        e-mail: davide.frapporti[ at ]polimi.it  <br> <br>
 	&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; davide.frapporti[ at ]edu.unige.it (old) <br> 
 	&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; davide.frapporti[ at ]uni-bayreuth.de (old)
 
