--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ I-20133 Milano <br><br>
 <br> <br> <br><br>
 Previously I was a Post-Doc at the <a href="https://unige.it/">University of Genova </a> and 
 	before a Post-Doc at the <a href="https://www.mathe8.uni-bayreuth.de/en/index.html">Lehrstuhl Mathematik VIII</a>
-	of the University of Bayreuth with I. Bauer and F. Catanese,
+	of the Universit&aumlt Bayreuth with I. Bauer and F. Catanese,
 	where I got the title "Habilitierter Doktor der Naturwissenschaften".<br>
 I got my PhD at the Università di Trento under the supervision of R. Pignatelli.<br><br><br>
 
