--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ body {
 <TD width=70% valign="center"> 
 <br>
 	    <p>I am a researcher (RTD/A) at the </p>
-        <a href="https://www.mate.polimi.it/"> Dipartimento di Matematica </a> of the <br>
+        <a href="https://www.mate.polimi.it/"> Dipartimento di Matematica  "Francesco Brioschi" </a>  <br>
         <a href="https://www.polimi.it/"> Politecnico di Milano </a><br>
-Piazza Leonardo da Vinci, 32<br>
+Via Bonardi 9<br>
 I-20133 Milano <br><br>
 
 
