--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@ body {
 <TD width=70% valign="center"> 
 <br>
 	    <p>I am a researcher (RTD/A) at the </p>
-        <a href="https://www.mate.polimi.it/"> Dipartimento di Matematica  "Francesco Brioschi" </a>  <br>
+        <a href="https://www.mate.polimi.it/"> Dipartimento di Matematica </a> "F. Brioschi" <br>
+	Building 14 "La Nave", 4th floor<br>
         <a href="https://www.polimi.it/"> Politecnico di Milano </a><br>
 Via Bonardi 9<br>
 I-20133 Milano <br><br>
-
+	
 
         e-mail: davide.frapporti [ at ] polimi.it  <br> <br>
 	&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; davide.frapporti [ at ] edu.unige.it (old) <br> 
