--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {
 <br>
 	    <p>I am a researcher (RTD/A) at the </p>
         <a href="https://www.mate.polimi.it/"> Dipartimento di Matematica </a> "F. Brioschi" <br>
-	Building 14 "La Nave", 4th floor<br>
+	Building 14 "La Nave"<br>
         <a href="https://www.polimi.it/"> Politecnico di Milano </a><br>
 Via Bonardi 9<br>
 I-20133 Milano <br><br>
