--- a/Teaching.html
+++ b/Teaching.html
@@ -91,6 +91,10 @@ body {
 <br>
 <b>Lecture:</b><br>
 <ul type="square">
+	<li> <i>Geometry</i>.<br>
+Linear Algebra course at Politecnico di Milano (Italy), Scuola di Ingegneria Civile, Ambientale e Territoriale.<br>
+			Terms: Winter Semester 2023/24.
+
 	    <li> <i>Staatsexamenskurs Algebra (vertieft)</i>, 
 <a href="RelatedFiles/Scripts/Skript_Algebra21.pdf">Lecture notes</a> (in german).<br>
 State Examination course in Algebra 
@@ -110,7 +114,7 @@ State Examination course in Analysis and Linear Algebra at Mathematisches Instit
                      Terms: Winter Semester 2021/22, 2020/21, 2019/20, 2018/19, 2017/18, 2016/17, 2015/16. <p>
 
 		
-	<li>Lecture: <i>Vorkurs f&uumlr Lehramts- und Bachelorstudenten Mathematik und Informatik</i>, 
+	<li><i>Vorkurs f&uumlr Lehramts- und Bachelorstudenten Mathematik und Informatik</i>, 
 <a href="RelatedFiles/Scripts/Skript_VK21.pdf">Lecture notes</a> (in german).	<br>
 Mathematics Precourse at Mathematisches Institut, Universit&aumlt Bayreuth (Germany).<br>
                      Terms: Winter Semester 2021/22, 2020/21, 2019/20, 2018/19, 2017/18, 2016/17, 2015/16. <p>
