--- a/Teaching.html
+++ b/Teaching.html
@@ -93,7 +93,7 @@ body {
 <ul type="square">
 	<li> <i>Geometry</i>.<br>
 Linear Algebra course at Politecnico di Milano (Italy), Scuola di Ingegneria Civile, Ambientale e Territoriale.<br>
-			Terms: I Semestre 2023/24.
+			Terms: I Semestre 2023/24.<p>
 
 	    <li> <i>Staatsexamenskurs Algebra (vertieft)</i>, 
 <a href="RelatedFiles/Scripts/Skript_Algebra21.pdf">Lecture notes</a> (in german).<br>
