--- a/Conferences.html
+++ b/Conferences.html
@@ -88,7 +88,18 @@ body {
      <br>
    <b>I was part of the organizing committee of the following events:</b><br><br>
 
+
+
+	
 <ul>
+	<li><a href="https://sites.google.com/unipv.it/winter-workshop-on-ag-2024/homel"> 
+		<i>Winter Workshop on Algebraic Geometry</i></a>,<br>   
+26-28 February 2024 
+at Universit&agrave degli Studi di Pavia.
+
+<br><br>
+
+		
 <li><a href="https://www.mathe8.uni-bayreuth.de/de/forschung/young-perspectives-II/index.html"> <i>Young Perspectives in Algebraic Geometry II</i></a>,<br>   
 3-5 April 2019 
 at Universit&aumlt Bayreuth (Germany).
