--- a/Publications.html
+++ b/Publications.html
@@ -111,6 +111,16 @@ body {
      
      <p><b>Preprints</b><br>
 	<ol >
+ <li value="3"> (with <a href = "http://www.mathe8.uni-bayreuth.de/de/team/professors/CataneseFabrizio/index.html">F. Catanese</a>,
+	<a href="http://www.staff.uni-bayreuth.de/~bt300503/index.html">C. Glei&szligner</a>,
+     <a href= "https://sites.google.com/site/liubenew/"> W. Liu</a>
+	 <a href= "https://www.iag.uni-hannover.de/en/schuett"> M. Sch&uumltt</a>
+	 )
+      <i>On the cohomologically trivial automorphisms of elliptic surfaces I: \(\chi(S)=0\)</i>, 2022. 
+ [<a href="https://arxiv.org/abs/2408.16936">arXiv:2408.16936</a>] <p>
+          </li>
+
+		
  <li value="2"> (with <a href = "http://www.mathe8.uni-bayreuth.de/de/team/professors/CataneseFabrizio/index.html">F. Catanese</a>,
 	 <a href="https://sites.google.com/site/yhchoag"> Y. Cho</a>,
      <a href= "https://sites.google.com/view/stephencoughlan/home"> S. Coughlan</a>)
@@ -125,8 +135,8 @@ Part 2 of <i>Varieties of Nodal surfaces, coding theory and Discriminants of cub
         [<a href="https://arxiv.org/abs/2011.14649">arXiv:2011.14649</a>]<p>
          Related files: <a href = "RelatedFiles/Min_SIMS/Script.txt"> The Magma script</a>,
          and the input data:  case <a href = "RelatedFiles/Min_SIMS/Inputs0.txt">q=0</a>, <a href = "RelatedFiles/Min_SIMS/Inputs1.txt"> q=1</a>,
-<a href = "RelatedFiles/Min_SIMS/Inputs2.txt">  q=2</a>.
-
+<a href = "RelatedFiles/Min_SIMS/Inputs2.txt">  q=2</a>. 
+	 </li>
 	
 		
     </ol>
