--- a/Publications.html
+++ b/Publications.html
@@ -114,10 +114,9 @@ body {
  <li value="3"> (with <a href = "http://www.mathe8.uni-bayreuth.de/de/team/professors/CataneseFabrizio/index.html">F. Catanese</a>,
 	<a href="http://www.staff.uni-bayreuth.de/~bt300503/index.html">C. Glei&szligner</a>,
      <a href= "https://sites.google.com/site/liubenew/"> W. Liu</a>
-	 <a href= "https://www.iag.uni-hannover.de/en/schuett"> M. Sch&uumltt</a>
-	 )
-      <i>On the cohomologically trivial automorphisms of elliptic surfaces I: \(\chi(S)=0\)</i>, 2022. 
- [<a href="https://arxiv.org/abs/2408.16936">arXiv:2408.16936</a>] <p>
+	 <a href= "https://www.iag.uni-hannover.de/en/schuett"> M. Sch&uumltt</a>)<p></p>
+      <i>On the cohomologically trivial automorphisms of elliptic surfaces I: \(\chi(S)=0\)</i>, 2024. 
+ [<a href="https://arxiv.org/abs/2408.16936">arXiv:2408.16936</a>] 
           </li>
 
 		
@@ -126,7 +125,7 @@ body {
      <a href= "https://sites.google.com/view/stephencoughlan/home"> S. Coughlan</a>)
       <i>Cubic hypersurfaces, associated discriminants and low degree nodal surfaces</i>;<p>
 Part 2 of <i>Varieties of Nodal surfaces, coding theory and Discriminants of cubic hypersurfaces</i>, 2022. 
- [<a href="https://arxiv.org/abs/2206.05492">arXiv:2206.05492</a>] <p>
+ [<a href="https://arxiv.org/abs/2206.05492">arXiv:2206.05492</a>] 
           </li>
 
 
