--- a/Publications.html
+++ b/Publications.html
@@ -114,7 +114,8 @@ body {
  <li value="3"> (with <a href = "http://www.mathe8.uni-bayreuth.de/de/team/professors/CataneseFabrizio/index.html">F. Catanese</a>,
 	<a href="http://www.staff.uni-bayreuth.de/~bt300503/index.html">C. Glei&szligner</a>,
      <a href= "https://sites.google.com/site/liubenew/"> W. Liu</a>
-	 <a href= "https://www.iag.uni-hannover.de/en/schuett"> M. Sch&uumltt</a>)<p></p>
+	 <a href= "https://www.iag.uni-hannover.de/en/schuett"> M. Sch&uumltt</a>) 
+	 
       <i>On the cohomologically trivial automorphisms of elliptic surfaces I: \(\chi(S)=0\)</i>, 2024. 
  [<a href="https://arxiv.org/abs/2408.16936">arXiv:2408.16936</a>] 
           </li>
