--- a/Publications.html
+++ b/Publications.html
@@ -75,6 +75,9 @@ body {
 <a href="Teaching.html">Teaching</a><p>
 </div>
 
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+	
 <div class="main">
 
  
