--- a/Teaching.html
+++ b/Teaching.html
@@ -93,31 +93,31 @@ body {
 <ul type="square">
 	<li> <i>Geometry</i>.<br>
 Linear Algebra course at Politecnico di Milano (Italy), Scuola di Ingegneria Civile, Ambientale e Territoriale.<br>
-			Terms: I Semestre 2023/24.<p>
+			Terms: I Semestre 2023/24, 2024/25.
 
 	    <li> <i>Staatsexamenskurs Algebra (vertieft)</i>, 
 <a href="RelatedFiles/Scripts/Skript_Algebra21.pdf">Lecture notes</a> (in german).<br>
 State Examination course in Algebra 
  at Mathematisches Institut, Universit&aumlt Bayreuth (Germany).<br>
-			Terms: Winter Semester 2021/22, 2020/21;  Sommer semester 2022, 2021, 2020, 2014.<p>
+			Terms: Winter Semester 2021/22, 2020/21;  Sommer semester 2022, 2021, 2020, 2014.
 
 	
 	<li> <i>Staatsexamenskurs Analysis (vertieft)</i>,
 <a href="RelatedFiles/Scripts/Skript_Analysis20.pdf">Lecture notes</a> (in german).<br>
 State Examination course in Analysis at  Mathematisches Institut, Universit&aumlt Bayreuth (Germany).<br>
-     Terms: Winter Semester 2020/21, 2019/20, 2018/19, 2017/18, 2016/17, 2015/16; Sommer semester 2020, 2019, 2018, 2017, 2016, 2015. <p>
+     Terms: Winter Semester 2020/21, 2019/20, 2018/19, 2017/18, 2016/17, 2015/16; Sommer semester 2020, 2019, 2018, 2017, 2016, 2015. 
 
 
 	
 	<li><i>Staatsexamenskolloquium Analysis und Lineare Algebra (nicht vertieft)</i>.<br>
 State Examination course in Analysis and Linear Algebra at Mathematisches Institut, Universit&aumlt Bayreuth (Germany).<br>
-                     Terms: Winter Semester 2021/22, 2020/21, 2019/20, 2018/19, 2017/18, 2016/17, 2015/16. <p>
+                     Terms: Winter Semester 2021/22, 2020/21, 2019/20, 2018/19, 2017/18, 2016/17, 2015/16. 
 
 		
 	<li><i>Vorkurs f&uumlr Lehramts- und Bachelorstudenten Mathematik und Informatik</i>, 
 <a href="RelatedFiles/Scripts/Skript_VK21.pdf">Lecture notes</a> (in german).	<br>
 Mathematics Precourse at Mathematisches Institut, Universit&aumlt Bayreuth (Germany).<br>
-                     Terms: Winter Semester 2021/22, 2020/21, 2019/20, 2018/19, 2017/18, 2016/17, 2015/16. <p>
+                     Terms: Winter Semester 2021/22, 2020/21, 2019/20, 2018/19, 2017/18, 2016/17, 2015/16. 
 	</ul>
 	</TD></TR>
 	
@@ -130,11 +130,11 @@ Mathematics Precourse at Mathematisches Institut, Universit&aumlt Bayreuth (Germ
 <ul type="square">
 	<li>  <i>Geometria I</i>.<br> 
 Linear Algebra course at Faculty of Science, University of Trento (Italy).<br>
-Terms: I Semestre 2011/12.<p>
+Terms: I Semestre 2011/12.
 
 	 <li> <i>Geometria e Algebra Lineare</i>.<br>
 Linear Algebra course at  Faculty of Engineering, Università di Trento (Italy).<br>
-                              Terms: II Semestre 2010/11,  II Semestre 2009/10. <p>
+                              Terms: II Semestre 2010/11,  II Semestre 2009/10. 
 
       
 </ul>
