--- a/Teaching.html
+++ b/Teaching.html
@@ -91,7 +91,7 @@ body {
 <br>
 <b>Lecture:</b><br>
 <ul type="square">
-	<li> <i>Geometry</i>.<a href="RelatedFiles/Scripts/SCRIPT_GEOMETRY.pdf">Lecture notes</a>.<br>
+	<li> <i>Geometry</i>, <a href="RelatedFiles/Scripts/SCRIPT_GEOMETRY.pdf">Lecture notes</a>.<br>
 Linear Algebra course at Politecnico di Milano (Italy), Scuola di Ingegneria Civile, Ambientale e Territoriale.<br>
 			Terms: I Semestre 2023/24, 2024/25.
 
