--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@ body {
 <TR>
 <TD width=70% valign="center"> 
 <br>
-	    <p>I am a researcher (RTD/A) at the </p>
+	    <p>I am an <i>Assistant Professor (RTD/A)</i> at the </p>
         <a href="https://www.mate.polimi.it/"> Dipartimento di Matematica </a> "F. Brioschi" <br>
 	Building 14 "La Nave"<br>
         <a href="https://www.polimi.it/"> Politecnico di Milano </a><br>
-Via Bonardi 9<br>
+Piazza Leonardo da Vinci 32<br>
 I-20133 Milano <br><br>
+
 	
 
         e-mail: davide.frapporti [ at ] polimi.it  <br> <br>
