--- a/Teaching.html
+++ b/Teaching.html
@@ -114,7 +114,7 @@ body {
 <b>Teaching Assistant:</b><br>
 <ul type="square">
 	<li>  <i>Geometria I</i>.<br> 
-	<p>Linear Algebra course at Faculty of Science, University of Trento (Italy).<br><
+	<p>Linear Algebra course at Faculty of Science, University of Trento (Italy).<br>
 	Terms: I Semestre 2011/12.</p>
 
 	 <li> <i>Geometria e Algebra Lineare</i>.<br>
